--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,10 @@
   text-align: center;
   font-family: "Fantasy";
   margin-top: 0px;
-  margin-left: 100px;
+  margin-left: 85px;
 }
 .Local {
-  color: white;
+  color:  #f310af;
   font-size: 35px;
   text-align: left;
   font-family: "Fantasy";
@@ -29,22 +29,30 @@
   margin-left: 0px;
 }
 .corC {
-  color: white;
+  color:  #f310af;
   margin-left: 150px;
   padding: 0px 0px 0px 0px;
   font-family: "Fantasy";
 }
 
 .ml-button {
-  margin-left: 255px;
+  margin-left: 150px;
   background-color: white;
   font-family: "Fantasy";
   color: black;
-  border: 2px solid #4ca; /* Green */
+  border: 2px solid #4ca; 
 }
 .centerfooter {
   text-align: center;
   color: white;
+}
+.tm-imgemail{
+
+  width: 100px;  
+
+
+  margin-left: 280px;
+
 }
 
 .container {
@@ -67,6 +75,7 @@
   flex-flow: row;
   justify-content: center;
   align-items: center;
+  
   padding: 0px 0px 0px 0px;
 }
 
@@ -100,7 +109,7 @@ div p {
 #menu li {
   display: inline;
   padding: 15px;
-  font-family: "arial";
+  font-family: "Fantasy";
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: #000;
   font-size: 3em;
@@ -108,7 +117,8 @@ div p {
 }
 .Contact {
   text-align: center;
-  color: white;
+  color:  #f310af;
+  font-size: 35px;
 }
 #menu li a {
   text-decoration: none;
